--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,14 @@
 @charset "UTF-8";
 
+body {
+  background: #edf0f1;
+}
+
+
 body , input, button {
   font-family: 'Roboto', sans-serif;
 }
+
 
 header {
   width: 100%;
@@ -28,6 +34,7 @@ header input {
   font-size: 15px;
   font-weight: 400;
   text-indent: 18px;
+  padding: 0 60px 0 0;
   background: rgba(255, 255, 255, 0.2);
 
   border-top-right-radius: 25px;
@@ -67,10 +74,24 @@ header button {
   border: 0px;
   box-shadow: none;
   outline: none;
+  cursor: pointer;
 
   -webkit-appearance: none;
   -moz-appearance:    none;
   -ms-appearance:    none;
   -o-appearance:    none;
   appearance: none;
+}
+
+header button svg {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -8px 0 0 -8px;
+}
+
+header button svg .fill {
+  fill: #25b99a;
 }
