--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,7 @@
 
 body {
   background: #edf0f1;
+  padding: 80px 0 0 0;
 }
 
 
@@ -94,4 +95,68 @@ header button svg {
 
 header button svg .fill {
   fill: #25b99a;
+}
+
+
+.container {
+  width: 100%;
+  padding: 15px;
+  float: left;
+}
+
+ul.todo {
+  width: 100%;
+  float: left;
+}
+
+ul.todo li {
+width: 100%;
+height: 50px;
+float: left;
+background: #fff;
+border-radius: 5px;
+position: relative;
+box-shadow: 8px 1px 2px rgba(44, 62, 80, 0.10);
+margin: 0 0 10px 0 ;
+padding: 0 100px 0 0 ;
+}
+
+ul.todo li:last-of-type {
+  margin: 0;
+}
+
+ul.todo li .buttons {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+ul.todo li .buttons button {
+  width: 50px;
+  height: 50px;
+  float: left;
+  background: none;
+  position: relative;
+  border: 0px;
+  box-shadow: nne;
+  outline: none;
+
+  -webkit-appearance: none;
+  -moz-appearance:    none;
+  -ms-appearance:    none;
+  -o-appearance:    none;
+  appearance: none;
+}
+
+
+ul.todo li .buttons button:last-of-type:before {
+  content: '';
+  width: 1px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  background: #edf0f1;
 }
