--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,10 @@ body , input, button {
 }
 
 
+.nofill {
+  fill: none;
+}
+
 header {
   width: 100%;
   height: 80px;
@@ -111,14 +115,19 @@ ul.todo {
 
 ul.todo li {
 width: 100%;
-height: 50px;
+min-height: 50px;
 float: left;
+font-size: 14px;
+font-weight: 500;
+color: #444;
+line-height: 22px;
+
 background: #fff;
 border-radius: 5px;
 position: relative;
-box-shadow: 8px 1px 2px rgba(44, 62, 80, 0.10);
+box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
 margin: 0 0 10px 0 ;
-padding: 0 100px 0 0 ;
+padding: 14px 100px 14px 14px ;
 }
 
 ul.todo li:last-of-type {
@@ -140,8 +149,9 @@ ul.todo li .buttons button {
   background: none;
   position: relative;
   border: 0px;
-  box-shadow: nne;
+  box-shadow: none;
   outline: none;
+  cursor: pointer;
 
   -webkit-appearance: none;
   -moz-appearance:    none;
@@ -159,4 +169,60 @@ ul.todo li .buttons button:last-of-type:before {
   top: 10px;
   left: 0;
   background: #edf0f1;
+}
+
+
+ul.todo li .buttons button svg {
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -11px 0 0 -11px;
+}
+
+ul.todo li .buttons button.complete svg {
+  border-radius: 11px;
+  border: 1.5px solid #25b99a;
+
+  transition: background 0.2s ease;
+}
+}
+
+ul.todo#completed li .buttons button.complete svg {
+  background: #25b99a;
+  border: 0;
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg {
+  background: rgba(37, 185, 154, 0.75);
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg .fill {
+  fill: #fff;
+}
+
+ul.todo#completed li .buttons button.complete svg .fill {
+  fill: #fff;
+}
+
+ul.todo li .buttons button svg .fill {
+  -webkit-transition: fill .2s ease;
+  -moz-transition: fill .2s ease;
+  -o-transition: fill .2s ease;
+  -ms-transition: fill .2s ease;
+  transition: fill .2s ease;
+}
+
+ul.todo li .buttons button.remove svg .fill {
+  fill: #c0cecb;
+}
+
+ul.todo li .buttons button.remove:hover svg .fill {
+  fill: #e85656;
+}
+
+
+ul.todo li .buttons button.complete svg .fill {
+  fill: #25b99a;;
 }
