--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,15 +33,15 @@ header {
 
 header input {
   width: 100%;
-  height: 50px;
-  float: left;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 400;
-  text-indent: 18px;
-  padding: 0 60px 0 0;
-  background: rgba(255, 255, 255, 0.2);
-
+    height: 50px;
+    float: left;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    text-indent: 18px;
+    padding: 0 60px 0 0;
+    background: rgba(255, 255, 255, 0.2);
+    border: 0;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   border-top-left-radius: 5px;
@@ -49,6 +49,9 @@ header input {
 
   box-shadow: none;
   outline: none;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 header input::-webkit-input-placeholder {
@@ -231,12 +234,12 @@ ul.todo li .buttons button.complete svg .fill {
   fill: #25b99a;;
 }
 
-ul.todo#completed:not(:empty) {
+ul.todo#completed {
   position: relative;
   padding: 60px 0 0 0 ;
 }
 
-ul.todo#completed:not(:empty):before {
+ul.todo#completed:before {
   content: '';
   width: 150px;
   height: 1px;
@@ -246,4 +249,22 @@ ul.todo#completed:not(:empty):before {
   left: 50%;
   margin: 0 0 0 -75px;
 
+}
+
+ul.todo#todo:empty:after {
+  content: 'You have nothing to-do!!';
+  margin: 15px 0 0 0;
+}
+
+ul.todo#completed:empty:after {
+  content: 'You have yet to complete any task';
+}
+
+ul.todo#completed:after,
+  ul.todo#todo:after {
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 12px;
+    color: #aaa;
 }
